fix visibility

--- a/hello/static/hello/css/all.css
+++ b/hello/static/hello/css/all.css
@@ -134,7 +134,7 @@ div.video iframe{
 
 /* hidden element */
 .hidden {
-    visibility: hidden;
+    display: none;
 }
 
 /* inline form */
